--- a/app/src/main/res/layout/fragment_statis_.xml
+++ b/app/src/main/res/layout/fragment_statis_.xml
@@ -7,38 +7,19 @@
     android:padding="36dp"
     tools:context=".Statis_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:text="@string/Judul"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="26sp"
-        android:textStyle="bold" />
+
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:text="TextView"
+        android:text="@string/Deskripsi"
         android:textAlignment="gravity"
         android:textColor="#000000"
         android:textSize="18dp"
         tools:text="@string/Deskripsi" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
-        android:padding="10dp"
-        android:text="Lihat Kelebihan"
-        android:textAllCaps="false"
-        android:textSize="18dp"
-        app:cornerRadius="300dp" />
+
 
 </FrameLayout>
